2004-06-26  Will Duquette  <will@cordelia.local>

	* snit.tcl	Added the "component" statement, with two options, 
	* snit.test     -public and -inherit.  Added all relevant tests.
	* snit.man      Updated the man page to describe it.

2004-05-30  Will Duquette  <will@wjduquette.com>

	* snit.man      Updated per 0.94 changes to date; also I made a
                	sweep through the whole document and cleaned
	        	things up here and there for readability.

2004-05-29  Will Duquette  <will@wjduqette.com>

	* snit.tcl      Moved Snit_component to snit::Component.
	                
	                Removed the "type" argument from all of the
			"Type.*" procs.  Instead, the compilation type
			is available as $compile(type).  Consequently,
			the Type.* procs can now be aliased into the
			compiler just once, instead of with every type
			definition.  (Did that.)

			Defined snit::macro.

	* snit.test     Added tests for snit::macro.

2004-05-15  Will Duquette  <will@wjduquette.com>

	* snit.tcl:     Updated version to 0.94
	* pkgIndex.tcl: 

	* snit.tcl:     Modified the Snit_dispatcher function to
	                use a method command cache.  Method commands
			are assembled in Snit_cacheLookup only if
			they aren't found in the cache.  The 
			new Snit_dispatcher was much shorter,
			so its code was moved into the object's
			instance command, and Snit_dispatcher
			was deleted altogether.  These changes 
			speed up method calls considerably.

			Snit_tracer was then modified to clear the
			method cache when the instance command is 
			renamed--the cached commands contained the
			old instance command name.

	* snit.test:    Components can be changed dynamically; the
	                method cache breaks this, because the 
			previous component's command is still
			cached.  Added a test that checks whether
			the method cache is cleared properly when
			a component is changed.

	* snit.tcl:	Snit_comptrace now clears the method cache